# down_obeservation

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: datasets.json  datasets.th-hpc4.json
deploy/: cron.example  gdex-observation-download.env.example  gdex-observation-download.service  gdex-observation-download.timer  slurm.sbatch.example  th-hpc4-crontab.example  th-hpc4-gdex-download.sub.example  th-hpc4-login-crontab.example  th-hpc4-login-download.sh  th-hpc4-network-check.sh
gdex_downloader/: __init__.py  cli.py
scripts/: install_systemd_user.sh  run_daily.sh
tests/: test_cli.py
